--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.18.1",
     "google-auth-library": "^9.15.0",
     "googleapis": "^144.0.0",
+    "gopd": "^1.2.0",
     "knex": "^3.1.0",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
