--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,6 @@
     "express-session": "^1.18.1",
     "google-auth-library": "^9.15.0",
     "googleapis": "^144.0.0",
-    "gopd": "^1.2.0",
     "knex": "^3.1.0",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
@@ -26,6 +25,7 @@
     "sequelize-cli": "^6.6.2"
   },
   "devDependencies": {
+    "@ljharb/tsconfig": "^0.2.2",
     "nodemon": "^3.1.7"
   }
 }
