--- a/server/package.json
+++ b/server/package.json
@@ -23,7 +23,14 @@
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5",
-    "sequelize-cli": "^6.6.2"
+    "sequelize-cli": "^6.6.2",
+    "axios-cache-adapter": "^2.7.3",
+    "bcrypt": "^5.1.0",
+    "compression": "^1.7.4",
+    "express-rate-limit": "^6.7.0",
+    "helmet": "^7.0.0",
+    "node-cache": "^5.1.2",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "@ljharb/tsconfig": "^0.2.2",
