--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "globals": "^15.12.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
+    "terser": "^5.37.0",
     "vite": "^6.0.1",
     "vite-plugin-compression": "^0.5.1"
   }
