--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
   "dependencies": {
+    "googleapis": "^144.0.0",
     "gopd": "^1.2.0",
+    "nodemailer": "^6.9.16",
     "pg": "^8.13.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17"
   }
 }
