--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "googleapis": "^144.0.0",
     "gopd": "^1.2.0",
     "knex": "^3.1.0",
+    "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5",
