--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-slot": "^1.1.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "compression": "^1.7.5",
     "dotenv": "^16.4.7",
     "googleapis": "^144.0.0",
     "gopd": "^1.2.0",
     "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
