--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "daisyui": "^4.12.14",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
