--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.2.0",
     "axios": "^1.7.8",
     "daisyui": "^4.12.14",
+    "framer-motion": "^11.16.4",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
